# nugap

./: README.md  pyproject.toml  tutorial_nugap.ipynb
examples/: clock_sim.py  demo_clock.py  demo_network.py  demo_replicates.py  demo_two_conditions.py
examples/clock_output/: clock_edges_results.csv  clock_gene_metadata.csv  clock_rnaseq_KO.csv  clock_rnaseq_WT.csv
src/nugap/: __init__.py  fitting.py  metric.py  network.py  pipeline.py  replicates.py  systems.py  viz.py
tests/: test_metric.py  test_numerics.py
validation/: validate_numerics.py
validation/matlab_crosscheck/: README.md  crosscheck_matlab.py  panel.json  reference_values.csv  reference_values.m
